# realtime-cdc-streaming-project

./: .env  .gitignore  README.md  compose.cdc.yml  compose.database.yml  pyproject.toml  requirements.txt
debezium-plugins/: register-orderevents.json  register-userevents.json
env/: broker-ui.env  broker.env  debezium-ui.env  debezium.env  postgres.env
init/: init-pg-dbz-replica.sql
scripts/: .env  main.py
services/: broker-ui.yml  broker.yml  debezium-ui.yml  debezium.yml
